SERVER-7771 WritebackListener thread can die while handling exceptions